--- a/sem2/Lab4/RandomForestClassifier.ipynb
+++ b/sem2/Lab4/RandomForestClassifier.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,10 +20,12 @@
     "import pickle\n",
     "\n",
     "nfs = NFStreamer(source='data/4/final.pcapng').to_pandas()\n",
-    "X_train = nfs[[\"src_port\", \"bidirectional_packets\", \"bidirectional_bytes\", \"bidirectional_duration_ms\"]]\n",
+    "#display(nfs)\n",
+    "X_train = nfs[[\"src_port\", \"bidirectional_packets\", \"bidirectional_bytes\"]]\n",
     "Y_train = nfs['application_name'].map({'WireGuard':1, 'IPsec.Azure':2, 'OpenVPN.Azure':3}).fillna(0)\n",
     "\n",
     "model = RandomForestClassifier()\n",
+    "model = RandomForestClassifier(criterion='gini', n_estimators=50, max_depth=10, random_state=0)\n",
     "model.fit(X_train, Y_train)\n",
     "\n",
     "with open(\"model.pkl\", \"wb\") as file:\n",
@@ -32,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_result(pcap_file:str, name:str):\n",
     "    print(name)\n",
     "    nfs = NFStreamer(source=pcap_file).to_pandas()\n",
-    "    X_test = nfs[[\"src_port\", \"bidirectional_packets\", \"bidirectional_bytes\", \"bidirectional_duration_ms\"]]\n",
+    "    X_test = nfs[[\"src_port\", \"bidirectional_packets\", \"bidirectional_bytes\"]]\n",
     "    Y_test = model.predict(X_test)\n",
     "\n",
     "    if 1 in Y_test:\n",
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -63,21 +65,20 @@
      "output_type": "stream",
      "text": [
       "1_wireguard\n",
-      "     IPSec used\n",
+      "     WireGuard used\n",
+      "     OpenVPN used\n",
       "1_ipsec\n",
       "     No VPN used\n",
       "1_openvpn\n",
       "     No VPN used\n",
       "2_wireguard\n",
-      "     WireGuard used\n",
-      "     OpenVPN used\n",
+      "     No VPN used\n",
       "2_ipsec\n",
       "     IPSec used\n",
       "2_openvpn\n",
       "     No VPN used\n",
       "3_novpn\n",
-      "     WireGuard used\n",
-      "     OpenVPN used\n"
+      "     No VPN used\n"
      ]
     }
    ],
