--- a/sem2/Lab4/RandomForestClassifier.ipynb
+++ b/sem2/Lab4/RandomForestClassifier.ipynb
@@ -11,20 +11,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from nfstream import NFStreamer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "import pickle\n",
-    "\n",
+    "from sklearn import preprocessing\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "nfs = NFStreamer(source='data/4/final.pcapng').to_pandas()\n",
     "#display(nfs)\n",
-    "X_train = nfs[[\"src_port\", \"bidirectional_packets\", \"bidirectional_bytes\"]]\n",
-    "Y_train = nfs['application_name'].map({'WireGuard':1, 'IPsec.Azure':2, 'OpenVPN.Azure':3}).fillna(0)\n",
+    "X_train = nfs[[\"bidirectional_bytes\", \n",
+    "               \"src_port\", \"bidirectional_duration_ms\"]]\n",
+    "X_train = preprocessing.normalize(X_train, axis=0)\n",
     "\n",
-    "model = RandomForestClassifier(criterion='gini', n_estimators=30, max_depth=10, random_state=0)\n",
+    "Y_train = nfs['application_name'].apply(lambda x: 1 if ('WireGuard' or 'IPsec.Azure' or 'OpenVPN.Azure') in x else 0)\n",
+    "model = RandomForestClassifier(criterion='gini')\n",
     "model.fit(X_train, Y_train)\n",
     "\n",
     "with open(\"model.pkl\", \"wb\") as file:\n",
@@ -33,30 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_result(pcap_file:str, name:str):\n",
     "    print(name)\n",
     "    nfs = NFStreamer(source=pcap_file).to_pandas()\n",
-    "    X_test = nfs[[\"src_port\", \"bidirectional_packets\", \"bidirectional_bytes\"]]\n",
+    "    X_test = nfs[[\"bidirectional_bytes\", \n",
+    "               \"src_port\", \"bidirectional_duration_ms\"]]\n",
+    "    X_test = preprocessing.normalize(X_train, axis=0)\n",
     "    Y_test = model.predict(X_test)\n",
     "\n",
     "    if 1 in Y_test:\n",
-    "        print('     WireGuard used')\n",
-    "    if 2 in Y_test:\n",
-    "        print('     IPSec used')\n",
-    "    if 1 in Y_test:\n",
-    "        print('     OpenVPN used')\n",
-    "\n",
-    "    if 1 not in Y_test and 2 not in Y_test and 3 not in Y_test:\n",
+    "        print('     VPN used')\n",
+    "    else:\n",
     "        print('     No VPN used')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -64,20 +71,19 @@
      "output_type": "stream",
      "text": [
       "1_wireguard\n",
-      "     WireGuard used\n",
-      "     OpenVPN used\n",
+      "     VPN used\n",
       "1_ipsec\n",
-      "     No VPN used\n",
+      "     VPN used\n",
       "1_openvpn\n",
-      "     No VPN used\n",
+      "     VPN used\n",
       "2_wireguard\n",
-      "     No VPN used\n",
+      "     VPN used\n",
       "2_ipsec\n",
-      "     IPSec used\n",
+      "     VPN used\n",
       "2_openvpn\n",
-      "     No VPN used\n",
+      "     VPN used\n",
       "3_novpn\n",
-      "     No VPN used\n"
+      "     VPN used\n"
      ]
     }
    ],
@@ -95,8 +101,17 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "eb71496b086dd212f7169a77146fe9805e434a0413b95c140fc138c60369f7f2"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.10.4 64-bit (windows store)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
