--- a/sem2/Lab4/RandomForestClassifier.ipynb
+++ b/sem2/Lab4/RandomForestClassifier.ipynb
@@ -23,18 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "nfs = NFStreamer(source='data/4/final.pcapng').to_pandas()\n",
     "#display(nfs)\n",
-    "X_train = nfs[[\"bidirectional_bytes\", \n",
-    "               \"src_port\", \"bidirectional_duration_ms\"]]\n",
+    "X_train = nfs[['bidirectional_packets', \"bidirectional_bytes\", \"bidirectional_duration_ms\"]]\n",
     "X_train = preprocessing.normalize(X_train, axis=0)\n",
     "\n",
     "Y_train = nfs['application_name'].apply(lambda x: 1 if ('WireGuard' or 'IPsec.Azure' or 'OpenVPN.Azure') in x else 0)\n",
-    "model = RandomForestClassifier(criterion='gini')\n",
+    "model = RandomForestClassifier()\n",
     "model.fit(X_train, Y_train)\n",
     "\n",
     "with open(\"model.pkl\", \"wb\") as file:\n",
@@ -50,20 +49,17 @@
     "def print_result(pcap_file:str, name:str):\n",
     "    print(name)\n",
     "    nfs = NFStreamer(source=pcap_file).to_pandas()\n",
-    "    X_test = nfs[[\"bidirectional_bytes\", \n",
-    "               \"src_port\", \"bidirectional_duration_ms\"]]\n",
-    "    X_test = preprocessing.normalize(X_train, axis=0)\n",
-    "    Y_test = model.predict(X_test)\n",
+    "    X_test = nfs[['bidirectional_packets', \"bidirectional_bytes\", \"bidirectional_duration_ms\"]]\n",
+    "    X_test = preprocessing.normalize(X_test, axis=0)\n",
+    "    #Y_test = model.predict(X_test)\n",
+    "    Y_test = nfs['application_name'].apply(lambda x: 1 if ('WireGuard' or 'IPsec.Azure' or 'OpenVPN.Azure') in x else 0)\n",
     "\n",
-    "    if 1 in Y_test:\n",
-    "        print('     VPN used')\n",
-    "    else:\n",
-    "        print('     No VPN used')"
+    "    print(f'    Model score: {model.score(X_test, Y_test)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -71,19 +67,19 @@
      "output_type": "stream",
      "text": [
       "1_wireguard\n",
-      "     VPN used\n",
+      "    Model score: 0.8571428571428571\n",
       "1_ipsec\n",
-      "     VPN used\n",
+      "    Model score: 1.0\n",
       "1_openvpn\n",
-      "     VPN used\n",
+      "    Model score: 1.0\n",
       "2_wireguard\n",
-      "     VPN used\n",
+      "    Model score: 0.0\n",
       "2_ipsec\n",
-      "     VPN used\n",
+      "    Model score: 1.0\n",
       "2_openvpn\n",
-      "     VPN used\n",
+      "    Model score: 1.0\n",
       "3_novpn\n",
-      "     VPN used\n"
+      "    Model score: 1.0\n"
      ]
     }
    ],
@@ -110,7 +106,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.4"
   },
   "orig_nbformat": 4
